Tue Sep 14 23:54:11 2004  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>

	* ext/tk/lib/multi-tk.rb: MultiTkIp#eval_string was en-bugged by
	  the previous changes.

Tue Sep 14 23:45:44 2004  Dave Thomas  <dave@pragprog.com>

	* lib/rdoc/ri/ri_formatter.rb (RI::TextFormatter::TextFormatter.for):
	  Add Eric Hodel's simpleformatter.

Tue Sep 14 22:11:08 2004  Minero Aoki  <aamine@loveruby.net>

	* parse.y [ripper]: Add rdoc.

Tue Sep 14 20:24:49 2004  Minero Aoki  <aamine@loveruby.net>

	* parse.y [ripper]: space event is on__sp, not on__lwsp.
	  [ruby-dev:24257]

	* ext/ripper/eventids2.c: ditto.

	* ext/ripper/lib/ripper.rb: ditto.

	* ext/ripper/depend (ripper.o): No action is needed.
	  [ruby-dev:24260]

	* ext/ripper/depend: Borland make does not accept pipes in
	  Makefile rules. [ruby-dev:24589]

	* ext/ripper/depend: separate rules for developpers.

	* ext/ripper/Makefile.dev: new file.

	* ext/ripper/MANIFEST: add Makefile.dev.

	* ext/ripper/tools/generate-eventids1.rb: read from file, not
	  stdin.

	* ext/ripper/extconf.rb: clean ripper.E.

	* ext/ripper/tools/generate-ripper_rb.rb: #include ids1/ids2
	  function was lost.

	* ext/ripper/tools/generate-ripper_rb.rb: SCANNER_EVENTS wrongly
	  contained parser events.

	* ext/ripper/lib/ripper.rb: ditto.

Tue Sep 14 16:59:37 2004  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>

	* ext/tcltklib/tcltklib.c: fix SEGV

	* ext/tk/lib/multi-tk.rb: improve safe-level handling of argument proc

	* ext/tk/sample/multi-ip_sample.rb: rename of old 'safe-tk.rb'

	* ext/tk/sample/safe-tk.rb: new sample script


Mon Sep 13 21:33:40 2004  GOTOU Yuuzou  <gotoyuzo@notwork.org>

	* ext/openssl/ossl_x509name.c (ossl_x509name_to_s): add optional
	  second argument to specify the output format (see also
	   X509_NAME_print_ex).

	* ext/openssl/ossl_x509name.c (ossl_x509name_init): new constants:
	  OpenSSL::X509::Name::COMPAT, OpenSSL::X509::Name::RFC2253,
	  OpenSSL::X509::ONELINE, OpenSSL::X509::MULTILINE.
