@@ -1,3 +1,8 @@
+Wed Sep 15 20:22:23 2004  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>
+
+	* ext/tk/sample/tkoptdb-safeTk.rb: fix a bug depend on the changes
+	  of MultiTkIp
+
 Tue Sep 14 23:54:11 2004  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>
 
 	* ext/tk/lib/multi-tk.rb: MultiTkIp#eval_string was en-bugged by
